--- a/CSS/style.css
+++ b/CSS/style.css
@@ -116,7 +116,8 @@ table, th, td {
 }
 .footer-section{
     position: relative; 
-    padding: 50px;
+    margin: auto; 
+    padding: 100px;
     background-color:black; 
     color: white; 
 }
